src/objects/DMAPP__DM_Milestone_Section__c.object
<CustomObject>
    <description>Milestone Section</description>
    <fields>
        <fullName>DMAPP__Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Section_Numbering__c</fullName>
        <description>This determines how the numbering for the questions in this section should be applied.  The options are continue numbering from previous section, restart numbering in this section or don&apos;t show any numbers for this section.</description>
        <inlineHelpText>This determines how the numbering for the questions in this section should be applied.  The options are continue numbering from previous section, restart numbering in this section or don&apos;t show any numbers for this section.</inlineHelpText>
        <label>Section Numbering</label>
        <picklist>
            <picklistValues>
                <fullName>Continue Numbering</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Restart Numbering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Numbering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Milestone Section</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>